--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,11 @@
    async
    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
   ></script>
+  <script
+   async
+   custom-element="amp-ad"
+   src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"
+  ></script>
   <meta charset="utf-8" />
   <link
    rel="icon"
